# arctic-spa-dc-rust

./: .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  TODO.md  build.rs  config.json
src/: asdc.rs  cmd_device.rs  cmd_discover.rs  cmd_query.rs  cmds.rs  config.rs  main.rs  tcp_client.rs
src/commands/: config.rs  device.rs  discover.rs  mock_server.rs  mod.rs  poll.rs  query.rs  reset.rs
src/core/: config.rs  db.rs  discovery.rs  logging.rs  mod.rs  net.rs  utils.rs
src/core/db/: tests.rs
src/core/discovery/: tests.rs
