[package]
name = "arctic-spa-dc-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "asdc"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
crc = "3.4.0"
protobuf = "3.7.2"
serde_json = "1.0"
directories = "5.0"

[build-dependencies]
protobuf-codegen = "3.7.2"
